--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@
             </div>
         </div>
         <div class="content-testimonial">
-            <p class="testimonial-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-            <div class="testimonial-attribution">-Thor, God of Thunder</div>
+            <div class="testimonial-container">
+              <p class="testimonial-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+              <div class="testimonial-attribution">-Thor, God of Thunder</div>
+            </div>
         </div>
         <div class="content-call-to-action">
             <h3 class="call-to-action-title">Call to action! It's time!</h3>
