Add positioning containers to call to action section
Add cta-container to contain all call to action contents in order to put
a background color box behind them. Also add a cta-left container to
allow columnar positioning for cta title and text.

--- a/index.html
+++ b/index.html
@@ -54,9 +54,13 @@
             </div>
         </div>
         <div class="content-call-to-action">
-            <h3 class="call-to-action-title">Call to action! It's time!</h3>
-            <p class="call-to-action-text">Sign up for our product by clicking that button right over there!</p>
-            <button class="call-to-action-signup">Sign up</button>
+            <div class="cta-container">
+              <div class="cta-left">
+                <h3 class="call-to-action-title">Call to action! It's time!</h3>
+                <p class="call-to-action-text">Sign up for our product by clicking that button right over there!</p>
+              </div>
+              <button class="call-to-action-signup">Sign up</button>
+            </div>
         </div>
         <div class="footer">
             <p class="footer-text">Copyright © The Odin Project 2021</p>
